--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<section class="flex-caption">
                  <h1>CALIFICACIONES</h1>
                  <p>consulta tus calificaciones segundo semestre</p>
-                 <button type="button">CALIFICACIONES</button>
+                 <button type="button"c class="Calif"><a href="https://www.edumediamanager.com/calificaciones/CBTis-189">CALIFICACIONES</a></button>
                     
 			
 				</section>
@@ -45,6 +45,8 @@
 			</li>
 		</ul>
 	</div>
+	
+	<!--Menu despegable-->
 	<div class="navegacion">
 		<nav>
 			<ul>
@@ -90,7 +92,7 @@
 					   <div class="submenu-items">
 						  <ul>
 							  <li><a href="" #="">*Requisitos de ingreso </a></li>
-							  <li><a href="" #="">*Perfil de los egresados</a></li>
+							  <li><a href="" #="">*fPerfil de los egresados</a></li>
 						  </ul>
 					  </div>
 					  </div>
@@ -109,17 +111,17 @@
 					  <div class="submenu">
 					   <div class="submenu-items">
 						  <ul>
-							  <li><a href="" #="">Diez consejos para avanzar en el EMS</a></li>
-							   <li><a href="" #="">Actividades academicas</a></li>
-							    <li><a href="" #="">Actividades deportivas</a></li>
-								 <li><a href="" #="">Actividades civicas</a></li>
+							  <li><a href="#">Diez consejos para avanzar en el EMS</a></li>
+							   <li><a href="#">Actividades academicas</a></li>
+							    <li><a href="#">Actividades deportivas</a></li>
+								 <li><a href="#">Actividades civicas</a></li>
 						  </ul>
 					  </div>
 					   <div class="submenu-items">
 						  
 						  <p>Activdades culturales</p>
 						  <ul>
-							  <li><a href="" #="">Espacios teatro</a></li>
+							  <li><a href="teatro.html">Espacios teatro</a></li>
 						  </ul>
 					  </div>
 					</li>
@@ -128,6 +130,7 @@
 			</ul>
 		</nav>
 	</div>
+	<!--Menu despegable fin-->
 </body>
 <script src="https://kit.fontawesome.com/a213dfc6d2.js" crossorigin="anonymous"></script>
 </html>
