--- a/teatro.html
+++ b/teatro.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-      <div class="navegacion">
+    <!--  <div class="navegacion">
 		<nav>
 			<ul>
 			  <li><a href="index.html">Inicio<span></span></a></li>
@@ -50,7 +50,7 @@
 			  <li>
 			</ul>
 		</nav>
-	</div>
+	</div>-->
     <section id="slider">
         <div id="content-images-slider">
             <div class="image-slider rellax" data-rellax-speed="-10" style='background-image: url(img/Teatro.PNG)'></div>
@@ -62,7 +62,86 @@
             <div class="image-slider" style='background-image: url(img/Teatro1.PNG)'></div>
         </div>
     </section>
+	    <div class="contenedor-img">
+		 <div class="caja">
+		 <div class="contenido">
+			 <p>
+			 <h1>Espacios teatro</h1>
+			 <h2>El mejor Grupo de Teatro Experimental en Matamoros</h2>
+			 <br> 
+				<strong>Historias</strong> El Grupo de Teatro ESPACIOS, surgió de los talleres artísticos del CBTIS 189 impartidos por el Profr. Jesús Ángel Bernal Herrera con la puesta en escena de la obra “Cosas de Muchachos” de Wilebaldo López.
+			 </p>
+			 <p>
+				  <img src="img/Bernal-profe.jpg" alt="Profr. Jesús Ángel Bernal Herrera">
+				 En el año 2000 la comedia musical “Dale una oportunidad al Amor” vino a refrendar el nombre del grupo que ya contaba con 45 actores.
+			 </p>
+			 <br>
+			 <p>
+				 En el año 2001 el Grupo de Teatro ESPACIOS, participó en el Encuentro Nacional de Arte y Cultura DGETI 2001 con la obra “Donde quedó la bolita” de Jesús Salcedo Carrasco obteniendo primer lugar y las menciones como mejor actriz a Silvia Iveth Morales Lozano y mejor actor de reparto a Héctor Eduardo Castillo Reséndiz y en ése mismo año participa en la Primera Muestra de Teatro Juvenil de Matamoros en el Teatro de la Reforma.
+			 </p>
+			 <br>
+			 <p>
+				 En enero del 2002 el Grupo de Teatro ESPACIOS participa en el Primer Concurso de Teatro “La Cultura del Agua” convocado por la Junta de Aguas y Drenaje de Matamoros con la Obra “Agua Pasa Por Mi Casa” obteniendo el segundo lugar, mejor actor Ricardo Alberto García Pérez y mejor actriz Paulina de los Ángeles Ochoa Castilleja, obra seleccionada para representar a México en el Encuentro Internacional sobre Conservación del Agua en la UTB (Universidad de Brownsville Texas) en E.U.A.
+			 </p>
+			 <br>
+			 <p>
+				 En el 15 de marzo del 2002 se estrena la Obra “Historias Íntimas del Paraíso” que representa a la Cd. de Matamoros en XXI Concurso Estatal de Teatro Maestro Rafael Solana realizado en Cd. Victoria Tamaulipas. Obteniendo el tercer lugar, premio como mejor escenografía, mejor actor de comedia Francisco Chávez Eguía y mejor actriz Laura Nayeli Aldaba Saldaña.
+			 </p>
+			 <br>
+			 <p>
+				 El Grupo de Teatro ESPACIOS también recibió en el mes de marzo el Premio Municipal de la Juventud 2003, que otorga la Presidencia Municipal a través del Instituto Municipal de Atención a la Juventud (I.M.A.J.). Por la gran labor que ha venido realizando al presentar sus espectáculos teatrales en el municipio y el estado, abordando temas que le interesan a nuestra sociedad y que de alguna forma contribuyen al fortalecimiento de nuestra cultura.
+			 </p>
+			 <br>
+			 <p>El Grupo de Teatro ESPACIOS representando al CBTIS 189 participa en el Certamen Nacional de Teatro en su modalidad “Un tranvía llamado…adicción” DGETI 2003, en coordinación con el ISSSTE, IMSS, CONACULTA y los Centros de Integración Juvenil que abordan el tema de “Prevención a las Adicciones”.</p>
 
+			 <p>
+				 Los días 12 y 13 de junio del 2003 se llevó a cabo la Etapa Estatal de este concurso, en Cd. Madero, Tamaulipas en el cual participaron 12 planteles CETIS Y CBTIS de todo el Estado.
+			 </p>
+			 <br>
+			 <p>
+				 El CBTIS 189 y su Grupo de Teatro ESPACIOS participaron con la puesta en escena: “Príncipe Caballito de Mar” de Medardo Treviño y obtuvieron los siguientes premios: Premio a la Mejor Escenografía, Premio al Mejor Vestuario confeccionado por el Artista Jaime Garza Salinas, Premio al Mejor Actor Ricardo Alberto García Pérez y el Premio a la Mejor Puesta en Escena.
+			 </p>
+			 <br>
+			 <h3>EL CRECIMIENTO </h3>
+			 <p>
+				 Debido a que los integrantes terminaban sus estudios de bachillerato en el CBTis 189, el grupo comenzó a transformarse invitando a jóvenes de toda la Ciudad e incluyendo en él actores y actrices de mayor experiencia, es así como se integra la Profra. Carolina Cisneros, el Profr. Pacheco, la Profra. Elsa García y otros más.
+			 </p>
+			 <br>
+			 <p>
+				 En el mes de mayo de 2003 ESPACIOS teatro invita al Director teatral Arturo Honorio, el cual por espacio de tres meses escribe y dirige especialmente apara el Grupo la obra FLORES EN EL DESIERTO, que se estrena el 2 de agosto del mismo año y el 9 del mismo mes participan el XXII CONCURSO ESTATAL DE TESTRO MAESTRO RAFAEL SOLANA, en Cd. Victoria Tam. y obtienen el PRIMER LUGAR en la categoría de teatro, además del Premio a la mejor iluminación, y Premio a la Mejor Obra Inédita, y obtiene el derecho de representar a Tamaulipas en la Gira de TEATRO DEL NORESTE en los Estados de Nuevo León, Coahuila, Chihuahua y Tamaulipas.
+			 </p>
+			  <br>
+			 <p>
+				 En septiembre del 2004, ESPACIOS Teatro Es invitado por el Rector Lic. Carlos Enrique Amaro Ramírez a representar a la Universidad I C N (Universidad de Ingenierías y Ciencias del Noreste) y el 28 de Noviembre de ese año presenta en sus instalaciones la Opera rock JESUCRISTO SUPERESTRELLA; para en un determinado tiempo realizar en el Campus de la Universidad temporadas de teatro.
+			 </p>
+			 <br>
+			 <p>
+				 En el año 2005 ESPACIOS teatro es becado por el Consejo Municipal para el Desarrollo Cultural de Matamoros, el Gobierno Estatal y CONACULTA para realizar el montaje de la Obra Musical LA BAMBA, en el cual participaron 30 actores, cantantes y bailarines, una banda de rock con 5 músicos. El proyecto “LA BAMBA” obra teatral que narra la vida de Ritchie Valens, el primer cantante de Rock and Roll de origen México-americano que triunfa por su talento en el mercado discográfico de los Estados Unidos, esta puesta en escena tubo la colaboraciEn Septiembre del 2007 Espacios Teatro inicia la puesta en escena de “Vaselina”, la Comedia Musical; con alumnos de CONALEP, CBTIS 189, Universidad I.C.N., Tecnológico de Matamoros, y varias Instituciones con una excelente producción y magníficos resultados, pues ya se llevan 25 representaciones y los compromisos continúan.ón de la Banda de Rock “Los Amos de la Noche” y se realizaron un buen número de funciones, para los estudiantes de Matamoros.
+			 </p>
+			  <br>
+			 <p>
+				 En Septiembre del 2007 Espacios Teatro inicia la puesta en escena de “Vaselina”, la Comedia Musical; con alumnos de CONALEP, CBTIS 189, Universidad I.C.N., Tecnológico de Matamoros, y varias Instituciones con una excelente producción y magníficos resultados, pues ya se llevan 25 representaciones y los compromisos continúan.
+			 </p>
+			 <br>
+			 <h3>ESPACIOS TEATRO </h3>
+			 <p>
+				 Desde finales de 1999, el Grupo ESPACIOS teatro mantiene una actividad ininterrumpida en el proceso de producción de sus espectáculos.
+			 </p>
+			 <br>
+			 <p>Sus integrantes en su mayoría estudiantes de bachillerato y universidad, mantienen un constante proceso de formación en las diferentes áreas que comprenden las artes escénicas: como el canto, el baile y la actuación.
+
+               </p>
+			   <br>
+			   <p>
+				   ESPACIOS es un grupo de actores jóvenes comprometidos con el arte y destinando sus ideas a la producción de un teatro que exprese la realidad de un lenguaje propio, limpio, sincero.
+			   </p>
+			   <br>
+			  <p>
+				  Debido al reconocimiento que ha obtenido el Grupo Espacios ha podido difundir sus obras por distintas ciudades del Estado, incluyendo la vecina ciudad de Brownsville, Texas, siempre con la responsabilidad y el gusto por hacer buen teatro, ya que el grupo entiende el teatro como un espacio artístico, ético y técnico.
+			  </p> 
+		 </div>
+		 </div>
+		 </div>
     <section id="content"></section>
     <script src='js/teatro.js'></script>
     <script src='js/efecto.js'></script>
