--- a/teatro.html
+++ b/teatro.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <!--  <div class="navegacion">
+    <div class="navegacion">
 		<nav>
 			<ul>
 			  <li><a href="index.html">Inicio<span></span></a></li>
@@ -50,7 +50,7 @@
 			  <li>
 			</ul>
 		</nav>
-	</div>-->
+	</div>
     <section id="slider">
         <div id="content-images-slider">
             <div class="image-slider rellax" data-rellax-speed="-10" style='background-image: url(img/Teatro.PNG)'></div>
